--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,6 +12,6 @@ jobs:
 
       # specify any bash command here prefixed with `run: `
       - run: go get -v -t -d ./...
-      - run: go test -v -coverprofile cp.out
+      - run: go test -v ./... -coverprofile cp.out
       - codecov/upload:
           file: cp.out
